# SMX-G1

./: TODO.md
P1/supermarket-1cash-main/: CMakeLists.txt  README.md  mymakefile
P1/supermarket-1cash-main/src/: agenda.c  agenda.h  cua.c  cua.h  sev  sev.c  sev.h  stochastic.c
P1/supermarket-fastcash-main/: README.md  mymakefile
P1/supermarket-fastcash-main /log/: dbg.txt
P1/supermarket-ncash-main/: CMakeLists.txt
P1/supermarket-ncash-main/src/: cua.c  cua.h  sev  sev.c  sev.h  stochastic.c
P1/supermarket-ncash-main/src/log/: dbg.txt
P1/supermarket-ncash-main/src/sev.dSYM/Contents/Resources/Relocations/x86_64/: sev.yml
P2/saloha-basic/: CMakeLists.txt  cra.c  in-ref  out  protocol.c  saloha  saloha.c  saloha.h  stats.c  stochastic.c
P3/: CMakeLists.txt  mymakefile  out.txt  rng  rng.c  rng.h  stochastic.c  verif.c
P4/: CMakeLists.txt  README.md  cra.c  cra.h  cues.c  cues.h  in-ref  mymakefile  out  protocol.c  saloha.c  saloha.h  stats.c  stochastic.c
P4/log/: in-ref  out
P4/mybuild/: saloha
P4/src/: cra.c  cra.h  cues.c  protocol.c  saloha  saloha.c  saloha.h  stats.c  stats.h  stochastic.c
P6/: runsaloha.sc  saloha-table.awk
P6/runs/: StatsTable  in.seed4567.s10.craP.dura100.start500.1  in.seed4567.s10.craP.dura500.start200.1  in.seed4567.s30.craP.dura100.start200.1  in.seed4567.s30.craP.dura100.start500.1  in.seed4567.s30.craP.dura300.start200.1  in.seed4567.s30.craP.dura300.start500.1  in.seed4567.s30.craP.dura500.start200.1  in.seed4567.s5.craP.dura100.start500.1  in.seed4567.s5.craP.dura300.start500.1  in.seed4567.s5.craP.dura500.start500.1  out.seed4567.s10.craP.dura100.start500.1  out.seed4567.s10.craP.dura300.start200.1  out.seed4567.s10.craP.dura500.start200.1  out.seed4567.s10.craP.dura500.start500.1  out.seed4567.s30.craP.dura100.start500.1  out.seed4567.s30.craP.dura500.start200.1  out.seed4567.s5.craP.dura100.start200.1  out.seed4567.s5.craP.dura100.start500.1  out.seed4567.s5.craP.dura300.start200.1  out.seed4567.s5.craP.dura300.start500.1  out.seed4567.s5.craP.dura500.start200.1
P6/runs_ger/: StatsTable  in.seed1234.s10.craB.dura30.start10.1  in.seed1234.s10.craB.dura30.start10.2  in.seed1234.s10.craB.dura30.start10.3  in.seed1234.s10.craB.dura30.start100.3  in.seed1234.s10.craB.dura30.start100.35  in.seed1234.s10.craB.dura30.start100.4  in.seed1234.s10.craD.dura30.start10.1  in.seed1234.s10.craD.dura30.start10.2  in.seed1234.s10.craD.dura30.start10.3  in.seed1234.s10.craD.dura30.start100.3  in.seed1234.s10.craD.dura30.start100.35  in.seed1234.s10.craD.dura30.start100.4  in.seed4567.s10.craP.dura100.start200.1  in.seed4567.s10.craP.dura300.start200.1  in.seed4567.s10.craP.dura300.start500.1  in.seed4567.s10.craP.dura500.start500.1  in.seed4567.s30.craP.dura500.start500.1  in.seed4567.s5.craP.dura100.start200.1  in.seed4567.s5.craP.dura300.start200.1  in.seed4567.s5.craP.dura500.start200.1  out.seed1234.s10.craB.dura30.start10.1  out.seed1234.s10.craB.dura30.start10.2  out.seed1234.s10.craB.dura30.start10.3  out.seed1234.s10.craB.dura30.start100.3  out.seed1234.s10.craB.dura30.start100.35  out.seed1234.s10.craB.dura30.start100.4  out.seed1234.s10.craD.dura30.start10.1  out.seed1234.s10.craD.dura30.start10.2  out.seed1234.s10.craD.dura30.start10.3  out.seed1234.s10.craD.dura30.start100.3  out.seed1234.s10.craD.dura30.start100.35  out.seed1234.s10.craD.dura30.start100.4  out.seed4567.s10.craP.dura100.start200.1  out.seed4567.s10.craP.dura300.start500.1  out.seed4567.s30.craP.dura100.start200.1  out.seed4567.s30.craP.dura300.start200.1  out.seed4567.s30.craP.dura300.start500.1  out.seed4567.s30.craP.dura500.start500.1  out.seed4567.s5.craP.dura500.start500.1
(+15 files in other folders)
